--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </head>
 
 <body>
@@ -43,9 +42,9 @@
     </nav>
 
     <div class="jumbotron">
-        <div class="container">
-            <div class="row">
-                Important notice
+        <div class="container-fluid">
+            <div class="alert alert-danger text-center">
+                <strong>IMPORTANT ANNOUNCEMENT!!</strong><br>WORK FROM HOME (WHF) Effective from 27th October - 9th November 2020  
             </div>
         </div>
     </div>
