--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         body {
             height: 1000px;
         }
-        navbar-nav:hover{
-           background-color: #5E9ECE;
-        }
+        
     </style>
 </head>
 
@@ -64,7 +62,7 @@
 
     <div class="container" >
         <div class="alert alert-danger text-center">
-            <strong>IMPORTANT ANNOUNCEMENT!!</strong><br>WORK FROM HOME (WHF) Effective from 27th October - 9th
+            <strong>IMPORTANT ANNOUNCEMENT!!</strong><br>WORK FROM HOME (WFH) Effective from 27th October - 9th
             November 2020
         </div>
         <div class="row">
