--- a/add.html
+++ b/add.html
@@ -32,8 +32,9 @@
                 </li>
             </ul>
             <ul class='navbar-nav'>
-                <li class='nav-item active'>
-                    <a class='nav-link' href='#'>Xuan</a>
+                <li class='nav-item active text-right'>
+                    <a class='nav-link' href='#'>Xuan<br><span style="font-size: 9px; color: white;">Project Manager</span></a>
+                    <!-- <span style="font-size: 9px; color: white;">Project Manager</span> -->
                 </li>
                 <li class='nav-item active'>
                     <a class='nav-link' href='#'><small>Logout</small></a>
@@ -111,7 +112,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> 
     </div>
     <script>
         //For choose image
