--- a/add.html
+++ b/add.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <form method="post" action="add.php">
     <nav class='navbar navbar-expand-lg navbar-dark bg-primary'>
         <a class='navbar-brand' href='#'>ITDP</a>
         <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent'
@@ -47,7 +48,7 @@
     <div class='container'>
         <div class="row">
             <div class='col-md-2 mt-2'>
-                <h5 style='color:#135788;'>: ADD EVENTS</h5>
+                <h5 style='color:#135788;'> ADD EVENTS</h5>
             </div>
             <div class='col-md-10 mt-5'>
                 <form class='md-form'>
@@ -55,19 +56,29 @@
                         <label style='color:#135788;'>Event type</label>
                         <div>
                             <div class='custom-control custom-radio custom-control-inline'>
-                                <input type='radio' id='customRadioInline1' name='customRadioInline1'
+                                <input type='radio' id='customRadioInline1' name='eventtype' value='Training'
                                     class='custom-control-input'>
                                 <label class='custom-control-label' for='customRadioInline1'>Training</label>
                             </div>
                             <div class='custom-control custom-radio custom-control-inline'>
-                                <input type='radio' id='customRadioInline2' name='customRadioInline1'
+                                <input type='radio' id='customRadioInline2' name='eventtype' value='Volunteering'
                                     class='custom-control-input'>
                                 <label class='custom-control-label' for='customRadioInline2'>Volunteering</label>
                             </div>
+                        </div>
+                    </div>
+                    <div class='form-group'>
+                        <label style='color:#135788;'>Compulsory</label>
+                        <div>
                             <div class='custom-control custom-radio custom-control-inline'>
-                                <input type='radio' id='customRadioInline3' name='customRadioInline1'
+                                <input type='radio' id='customRadioInline3' name='compulsory' value='Yes'
                                     class='custom-control-input'>
-                                <label class='custom-control-label' for='customRadioInline3'>Team Building</label>
+                                <label class='custom-control-label' for='customRadioInline3'>Yes</label>
+                            </div>
+                            <div class='custom-control custom-radio custom-control-inline'>
+                                <input type='radio' id='customRadioInline4' name='compulsory' value='No'
+                                    class='custom-control-input'>
+                                <label class='custom-control-label' for='customRadioInline4'>No</label>
                             </div>
                         </div>
                     </div>
@@ -122,4 +133,5 @@
             $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
         });
     </script>
+    </form>
 </body>
