--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         body {
             height: 1000px;
         }
-        
     </style>
 </head>
 
@@ -49,7 +48,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container my-3">
+    <div class="container-fluid my-3">
         <div class="row">
             <div class="col-xs-9 col-md-2 col-lg-2">
                 <img src="profile.png" class="rounded-circle" alt="Profile Picture" width="100">
@@ -60,49 +59,52 @@
         </div>
     </div>
 
-    <div class="container" >
+    <div class="container-fluid border border-info">
         <div class="alert alert-danger text-center">
             <strong>IMPORTANT ANNOUNCEMENT!!</strong><br>WORK FROM HOME (WFH) Effective from 27th October - 9th
             November 2020
         </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card mt-5">
-                    <div class="card-body">
-                        <hr class="bg-info" />
-                        <b class="h6">TRAINING</b>
-                        <div class="progress">
+        <div class='container'>
+            <h4><b> 2nd Quarter (Oct - Dec)</b></h4>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mt-1">
+                        <div class="card-body">
+                            <hr class="bg-info" />
+                            <b class="h6">TRAINING</b>
+                            <div class="progress">
 
-                            <div class="progress-bar progress-bar-warning" style="width: 70%; min-width:20px">
-                                70%
+                                <div class="progress-bar progress-bar-warning" style="width: 70%; min-width:20px">
+                                    7 hours
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mt-5">
-                    <div class="card-body">
-                        <hr class="bg-info" />
-                        <b class="h6">VOLUNTEERING</b>
-                        <div class="progress">
+                <div class="col-md-4">
+                    <div class="card mt-1">
+                        <div class="card-body">
+                            <hr class="bg-info" />
+                            <b class="h6">VOLUNTEERING</b>
+                            <div class="progress">
 
-                            <div class="progress-bar" style="width: 40%;">
-                                40%
+                                <div class="progress-bar" style="width: 40%;">
+                                    4 hours
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mt-5">
-                    <div class="card-body">
-                        <hr class="bg-info" />
-                        <b class="h6">TOTAL</b>
-                        <div class="progress">
+                <div class="col-md-4">
+                    <div class="card mt-1">
+                        <div class="card-body">
+                            <hr class="bg-info" />
+                            <b class="h6">TOTAL</b>
+                            <div class="progress">
 
-                            <div class="progress-bar" style="width: 55%;">
-                                55%
+                                <div class="progress-bar" style="width: 55%;">
+                                    55%
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -110,24 +112,149 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-5">
+            <div class="col-md-4 m-2">
 
                 <div class="row">
-                    <img src="schedule.png" class="rounded-circle" alt="Profile Picture" width="100">
-                    <h2>Schedule</h2>
+                    <img src="schedule.png" class="rounded-circle" alt="schedule" width="100">
+                    <h4>Training Program Schedule</h4>
+
+                    <div class="col-md-12">
+                        <div class="card m-1">
+                            <div class="card-header">
+                                <h5 class="card-title">Training Program 1</h5>
+                                <h6 class='class-subtitle'>Webminar</h6>
+                            </div>
+                            <div class="card-body">
+                                <p>Date: 10-Nov-2020 (Tuesday)<br>
+                                    Time: 10:00am - 12:00pm <br>
+                                    Venue: Zoom<br>
+                                    Contribution hour: 2hours
+                                </p>
+                                <span class="badge badge-info float-right">Optional</span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-12">
+                        <div class="card ">
+                            <div class="card-header">
+                                <h5 class="card-title">Training Program 1</h5>
+                                <h6 class='class-subtitle'>Webminar</h6>
+                            </div>
+                            <div class="card-body">
+                                <p>Date: 10-Nov-2020 (Tuesday)<br>
+                                    Time: 10:00am - 12:00pm <br>
+                                    Venue: Zoom<br>
+                                    Contribution hour: 2hours</p>
+                                <span class="badge badge-danger float-right">Required</span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-12">
+                        <div class="card m-1">
+                            <div class="card-header">
+                                <h5 class="card-title">Training Program 1</h5>
+                                <h6 class='class-subtitle'>Webminar</h6>
+                            </div>
+                            <div class="card-body">
+                                <p>Date: 10-Nov-2020 (Tuesday)<br>
+                                    Time: 10:00am - 12:00pm <br>
+                                    Venue: Zoom<br>
+                                    Contribution hour: 2hours</p>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-7">
+            <div class="col-md-4 m-2 ">
+
+                <div class="row">
+                    <img src="schedule.png" class="rounded-circle" alt="schedule" width="100">
+                    <h3>Event Schedule</h3>
+
+
+                    <div class="col-md-12">
+                        <div class="card m-1">
+                            <div class="card-header">
+                                <h5 class="card-title">CSR 1</h5>
+                                <h6 class='class-subtitle'>Volunteering</h6>
+                            </div>
+                            <div class="card-body">
+                                <p>Date: 10-Nov-2020 (Tuesday)<br>
+                                    Time: 10:00am - 12:00pm <br>
+                                    Venue: Zoo Negara<br>
+                                    Contribution hour: 2hours</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-12">
+                        <div class="card m-1">
+                            <div class="card-header">
+                                <h5 class="card-title">CSR 1</h5>
+                                <h6 class='class-subtitle'>Volunteering</h6>
+                            </div>
+                            <div class="card-body">
+                                <p>Date: 10-Nov-2020 (Tuesday)<br>
+                                    Time: 10:00am - 12:00pm <br>
+                                    Venue: Zoo Negara<br>
+                                    Contribution hour: 2hours</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-12">
+                        <div class="card m-1">
+                            <div class="card-header">
+                                <h5 class="card-title">CSR 1</h5>
+                                <h6 class='class-subtitle'>Volunteering</h6>
+                            </div>
+                            <div class="card-body">
+                                <p>Date: 10-Nov-2020 (Tuesday)<br>
+                                    Time: 10:00am - 12:00pm <br>
+                                    Venue: Zoo Negara<br>
+                                    Contribution hour: 2hours</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 my-3 m-2 ">
                 <div class="row">
                     <img src="event.png" class="rounded-circle" alt="Profile Picture" width="100">
-                    <h2>Upcoming Events</h2>
+                    <h6>Suggested Activities</h6>
                 </div>
-                
+                <div class='card m-2' style='width: 20rem;'>
+                    <img src='http://placehold.it/280x180' class='card-img-top' alt='...'>
+                    <div class='card-body'>
+                        <h5 class="card-title">CSR 1</h5>
+                        <h6 class='class-subtitle'>Volunteering</h6>
+                    </div>
+                </div>
+
+
+                <div class='card m-2' style='width: 20rem;'>
+                    <img src='http://placehold.it/280x180' class='card-img-top' alt='...'>
+                    <div class='card-body'>
+                        <h5 class="card-title">CSR 1</h5>
+                        <h6 class='class-subtitle'>Volunteering</h6>
+                    </div>
+                </div>
+                <div class='card m-2' style='width: 20rem;'>
+                    <img src='http://placehold.it/280x180' class='card-img-top' alt='...'>
+                    <div class='card-body'>
+                        <h5 class="card-title">CSR 1</h5>
+                        <h6 class='class-subtitle'>Volunteering</h6>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 </body>
 
 </html>
