update history.html table

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="col-md-3 my-3 m-2 ">
                 <div class="row">
                     <img src="event.png" class="rounded-circle" alt="Profile Picture" width="100">
-                    <h6>Suggested Activities</h6>
+                    <h6>Recomended Event</h6>
                 </div>
                 <div class='card m-2' style='width: 20rem;'>
                     <img src='http://placehold.it/280x180' class='card-img-top' alt='...'>
