--- a/history.html
+++ b/history.html
@@ -42,20 +42,15 @@
     </div>
   </nav>
 
-  <!-- <div class="container-xl padding pt-3 my-3">
-        <h1>My First Bootstrap Page</h1>
-        <p>This is some text.</p>
-    </div> -->
-
   <div class="container-fluid">
     <h2>Statistics</h2>
     <table class="table table-hover text-center col-8">
       <thead class="thead-dark">
         <tr>
           <th>Month</th>
-          <th>Joined</th>
-          <th>Attended</th>
-          <th>Missed</th>
+          <th>Training (Hour)</th>
+          <th>Event (Hour)</th>
+          <th>Total (Hour)</th>
         </tr>
       </thead>
       <tbody>
