--- a/details.html
+++ b/details.html
@@ -57,7 +57,7 @@
             <div class="col-md-5">
                 <img class="img-fluid" src="http://placehold.it/400x300" alt="">
                 <div class="container my-3">
-                    <button type='submit' class='btn btn-primary'>Sign Up</button>
+                    <button type='submit' class='btn btn-primary'>Register Now!</button>
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
                     </div>
                     <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
                         <div class="px-4 pt-3"> <a href="javascript:void(0)" class="text-muted d-inline-flex align-items-center align-middle" data-abc="true"> <i class="fa fa-heart text-danger"></i>&nbsp; <span class="align-middle">445</span> </a> <span class="text-muted d-inline-flex align-items-center align-middle ml-4"> <i class="fa fa-eye text-muted fsize-3"></i>&nbsp; <span class="align-middle">14532</span> </span> </div>
-                        <div class="px-4 pt-3"> <button type="button" class="btn btn-primary"><i class="ion ion-md-create"></i>&nbsp; Reply</button> </div>
+                        <div class="px-4 pt-3"> <button type="button" class="btn btn-primary"><i class="ion ion-md-create"></i>Reply</button> </div>
                     </div>
                 </div>
             </div>
