--- a/history.html
+++ b/history.html
@@ -89,6 +89,192 @@
       </thead>
     </table>
   </div>
+
+  <div class="container-fluid">
+
+    <div class="row">
+      <h4 class='m-3'>History Activities Details</h4>
+      <form class="form-inline ">
+
+        <button class="btn btn-primary mr-5" type="button">OCT - DEC</button>
+        <a href="#"><button class="btn btn-outline-primary mr-5" type="button">JAN - MAR</button></a>
+        <a href="#"><button class="btn btn-outline-primary mr-5" type="button">APR - JUN</button></a>
+        <a href="#"><button class="btn btn-outline-primary mr-5" type="button">JUL - SEP</button></a>
+      </form>
+
+    </div>
+
+    </nav>
+
+
+    <table class="table table-hover table-sm text-center col-10">
+      <thead class="thead-dark">
+        <tr>
+          <th colspan="5">Oct 2020</th>
+        </tr>
+      </thead>
+      <thead class="thead-dark">
+        <tr>
+          <th>Events</th>
+          <th>Date</th>
+          <th>Time</th>
+          <th>Venue</th>
+          <th>Contribution Hours</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Training 1</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+      <thead class="thead-light">
+        <tr>
+          <th>Total Contribution Hours</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th>12</th>
+        </tr>
+      </thead>
+    </table>
+
+    <table class="table table-hover table-sm text-center col-10">
+      <thead class="thead-dark">
+        <tr>
+          <th colspan="5">Nov 2020</th>
+        </tr>
+      </thead>
+      <thead class="thead-dark">
+        <tr>
+          <th>Events</th>
+          <th>Date</th>
+          <th>Time</th>
+          <th>Venue</th>
+          <th>Contribution Hours</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Training 1</td>
+          <td>01-Sep-20</td>
+          <td>10:00am - 12:00pm</td>
+          <td>Zoom</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+      <thead class="thead-light">
+        <tr>
+          <th>Total Contribution Hours</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th>12</th>
+        </tr>
+      </thead>
+    </table>
+
+    <table class="table table-hover table-sm text-center col-10">
+      <thead class="thead-dark">
+        <tr>
+          <th colspan="5">Dec 2020</th>
+        </tr>
+      </thead>
+      <thead class="thead-dark">
+        <tr>
+          <th>Events</th>
+          <th>Date</th>
+          <th>Time</th>
+          <th>Venue</th>
+          <th>Contribution Hours</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Training 1</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+      <thead class="thead-light">
+        <tr>
+          <th>Total Contribution Hours</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th>12</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
 </body>
 
 </html>
