--- a/add.html
+++ b/add.html
@@ -14,124 +14,173 @@
 
 <body>
     <form method="post" action="add.php">
-    <nav class='navbar navbar-expand-lg navbar-dark bg-primary'>
-        <a class='navbar-brand' href='#'>ITDP</a>
-        <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent'
-            aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-            <span class='navbar-toggler-icon'></span>
-        </button>
-        <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-            <ul class='navbar-nav mr-auto'>
-                <li class='nav-item active'>
-                    <a class='nav-link' href='index.html'>Home</a>
-                </li>
-                <li class='nav-item'>
-                    <a class='nav-link' href='eventlist.html'>Events</a>
-                </li>
-                <li class='nav-item'>
-                    <a class='nav-link' href='history.html'>History</a>
-                </li>
-            </ul>
-            <ul class='navbar-nav'>
-                <li class='nav-item active text-right'>
-                    <a class='nav-link' href='#'>Xuan<br><span style="font-size: 9px; color: white;">Project Manager</span></a>
-                    <!-- <span style="font-size: 9px; color: white;">Project Manager</span> -->
-                </li>
-                <li class='nav-item active'>
-                    <a class='nav-link' href='#'><small>Logout</small></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-
-    <div class='container'>
-        <div class="row">
-            <div class='col-md-2 mt-2'>
-                <h5 style='color:#135788;'> ADD EVENTS</h5>
+        <nav class='navbar navbar-expand-lg navbar-dark bg-primary'>
+            <a class='navbar-brand' href='#'>ITDP</a>
+            <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent'
+                aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
+                <span class='navbar-toggler-icon'></span>
+            </button>
+            <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+                <ul class='navbar-nav mr-auto'>
+                    <li class='nav-item active'>
+                        <a class='nav-link' href='index.html'>Home</a>
+                    </li>
+                    <li class='nav-item'>
+                        <a class='nav-link' href='eventlist.html'>Events</a>
+                    </li>
+                    <li class='nav-item'>
+                        <a class='nav-link' href='history.html'>History</a>
+                    </li>
+                </ul>
+                <ul class='navbar-nav'>
+                    <li class='nav-item active text-right'>
+                        <a class='nav-link' href='#'>Xuan<br><span style="font-size: 9px; color: white;">Project
+                                Manager</span></a>
+                        <!-- <span style="font-size: 9px; color: white;">Project Manager</span> -->
+                    </li>
+                    <li class='nav-item active'>
+                        <a class='nav-link' href='#'><small>Logout</small></a>
+                    </li>
+                </ul>
             </div>
-            <div class='col-md-10 mt-5'>
-                <form class='md-form'>
-                    <div class='form-group'>
-                        <label style='color:#135788;'>Event type</label>
-                        <div>
-                            <div class='custom-control custom-radio custom-control-inline'>
-                                <input type='radio' id='customRadioInline1' name='eventtype' value='Training'
-                                    class='custom-control-input'>
-                                <label class='custom-control-label' for='customRadioInline1'>Training</label>
-                            </div>
-                            <div class='custom-control custom-radio custom-control-inline'>
-                                <input type='radio' id='customRadioInline2' name='eventtype' value='Volunteering'
-                                    class='custom-control-input'>
-                                <label class='custom-control-label' for='customRadioInline2'>Volunteering</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class='form-group'>
-                        <label style='color:#135788;'>Compulsory</label>
-                        <div>
-                            <div class='custom-control custom-radio custom-control-inline'>
-                                <input type='radio' id='customRadioInline3' name='compulsory' value='Yes'
-                                    class='custom-control-input'>
-                                <label class='custom-control-label' for='customRadioInline3'>Yes</label>
-                            </div>
-                            <div class='custom-control custom-radio custom-control-inline'>
-                                <input type='radio' id='customRadioInline4' name='compulsory' value='No'
-                                    class='custom-control-input'>
-                                <label class='custom-control-label' for='customRadioInline4'>No</label>
-                            </div>
-                        </div>
-                    </div>
+        </nav>
 
-                    <div class='form-group'>
-                        <label for='eventname' style='color:#135788;'>Event name</label>
-                        <input class='form-control' type='text' id='eventname' name='eventname'>
-                    </div>
 
-                    <div class='form-group'>
-                        <label style='color:#135788;'>Upload image</label>
-                        <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="customFile">
-                            <label class="custom-file-label" for="customFile">Choose image</label>
+        <div class='container'>
+            <div class="row">
+                <div class='col-md-2 mt-2'>
+                    <h5 style='color:#135788;'> ADD EVENTS</h5>
+                </div>
+                <div class='col-md-10 mt-5'>
+                    <form class='md-form'>
+                        <div class='form-group' id="radio">
+                            <label style='color:#135788;'>Event Category</label>
+                            <div>
+                                <div class='custom-control custom-radio custom-control-inline'>
+                                    <input type='radio' id='customRadioInline1' name='eventcategory' value='Training'
+                                        onclick="myMth(1)" class='custom-control-input' checked>
+                                    <label class='custom-control-label' for='customRadioInline1'>Training</label>
+                                </div>
+                                <div class='custom-control custom-radio custom-control-inline'>
+                                    <input type='radio' id='customRadioInline2' name='eventcategory'
+                                        value='Other Events' onclick="myMth(2)" class='custom-control-input'>
+                                    <label class='custom-control-label' for='customRadioInline2'>Other Events</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='form-group'>
+                            <label style='color:#135788;'>Event Type</label>
+                            <div>
+                                <div id="demo">
+                                    <div class='custom-control custom-radio custom-control-inline'>
+                                        <input type='radio' id='customRadioInline1.1' name='eventtype' value='Workshop'
+                                            class='custom-control-input'>
+                                        <label class='custom-control-label' for='customRadioInline1.1'>Workshop</label>
+                                    </div>
+                                    <div class='custom-control custom-radio custom-control-inline'>
+                                        <input type='radio' id='customRadioInline1.2' name='eventtype'
+                                            value='Webminar' class='custom-control-input'>
+                                        <label class='custom-control-label' for='customRadioInline1.2'>Webminar</label>
+                                    </div>
+                                </div>
+                                <div id="demo1" style="display:none">
+                                    <div class='custom-control custom-radio custom-control-inline'>
+                                        <input type='radio' id='customRadioInline2.1' name='eventtype'
+                                            value='Team Building' class='custom-control-input'>
+                                        <label class='custom-control-label' for='customRadioInline2.1'>Team
+                                            Building</label>
+                                    </div>
+                                    <div class='custom-control custom-radio custom-control-inline'>
+                                        <input type='radio' id='customRadioInline2.2' name='eventtype'
+                                            value='Volunteering' class='custom-control-input'>
+                                        <label class='custom-control-label'
+                                            for='customRadioInline2.2'>Volunteering</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='form-group'>
+                            <label style='color:#135788;'>Compulsory</label>
+                            <div>
+                                <div class='custom-control custom-radio custom-control-inline'>
+                                    <input type='radio' id='customRadioInline3' name='compulsory' value='Yes'
+                                        class='custom-control-input'>
+                                    <label class='custom-control-label' for='customRadioInline3'>Yes</label>
+                                </div>
+                                <div class='custom-control custom-radio custom-control-inline'>
+                                    <input type='radio' id='customRadioInline4' name='compulsory' value='No'
+                                        class='custom-control-input'>
+                                    <label class='custom-control-label' for='customRadioInline4'>No</label>
+                                </div>
+                            </div>
                         </div>
 
-                    </div>
-                    <div class='form-row'>
-                        <div class='form-group col-md-4'>
-                            <label for='datepicker' style='color:#135788;'>Date</label>
-                            <input class='form-control' type='date' id='datepicker' name='datepicker'>
+                        <div class='form-group'>
+                            <label for='eventname' style='color:#135788;'>Event name</label>
+                            <input class='form-control' type='text' id='eventname' name='eventname'>
                         </div>
-                        <div class='form-group col-md-4'>
-                            <label for='appt' style='color:#135788;'>Starting Time</label>
-                            <input class='form-control' type='time' id='appt' name='appt'>
+
+                        <div class='form-group'>
+                            <label style='color:#135788;'>Upload image</label>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="customFile">
+                                <label class="custom-file-label" for="customFile">Choose image</label>
+                            </div>
+
                         </div>
-                        <div class='form-group col-md-4'>
-                        <label for='appt1' style='color:#135788;'>Ending Time</label>
-                        <input class='form-control' type='time' id='appt1' name='appt1'>
+                        <div class='form-row'>
+                            <div class='form-group col-md-4'>
+                                <label for='datepicker' style='color:#135788;'>Date</label>
+                                <input class='form-control' type='date' id='datepicker' name='datepicker'>
+                            </div>
+                            <div class='form-group col-md-4'>
+                                <label for='appt' style='color:#135788;'>Starting Time</label>
+                                <input class='form-control' type='time' id='appt' name='appt'>
+                            </div>
+                            <div class='form-group col-md-4'>
+                                <label for='appt1' style='color:#135788;'>Ending Time</label>
+                                <input class='form-control' type='time' id='appt1' name='appt1'>
+                            </div>
                         </div>
-                    </div>
-                    
-                    <div class='form-group'>
-                        <label for='venue' style='color:#135788;'>Venue</label>
-                        <input class='form-control' type='text' id='venue' name='venue'>
-                    </div>
-                    <div class='form-group'>
-                        <label for='description' style='color:#135788;'>Event Description</label>
-                        <textarea class="form-control" id="description" name='description' rows="3"></textarea>
-                    </div>
-                    <button type='submit' class='btn btn-primary'>Save Changes</button>
-                </form>
+
+                        <div class='form-group'>
+                            <label for='venue' style='color:#135788;'>Venue</label>
+                            <input class='form-control' type='text' id='venue' name='venue'>
+                        </div>
+                        <div class='form-group'>
+                            <label for='description' style='color:#135788;'>Event Description</label>
+                            <textarea class="form-control" id="description" name='description' rows="3"></textarea>
+                        </div>
+                        <button type='submit' class='btn btn-primary'>Save Changes</button>
+                    </form>
+                </div>
             </div>
         </div>
-    </div> 
-    </div>
-    <script>
-        //For choose image
-        // Add the following code if you want the name of the file appear on select
-        $(".custom-file-input").on("change", function () {
-            var fileName = $(this).val().split("\\").pop();
-            $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-        });
-    </script>
+        </div>
+        <script>
+            //For choose image
+            // Add the following code if you want the name of the file appear on select
+            $(".custom-file-input").on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+            });
+
+            function myMth(id) {
+                var parentDiv = document.getElementById("demo");  
+                var parentDiv1 = document.getElementById("demo1");  
+                if (id == 1) {
+                    parentDiv.style.display = "block";
+                    parentDiv1.style.display = "none";
+                }else{
+                    parentDiv.style.display = "none";
+                    parentDiv1.style.display = "block";
+                }
+                // }
+                // else {
+                //     //if display="block" make it block. so that dropdown will disappear
+                //     parentDiv.style.display = "none";
+                // }
+            }
+        </script>
     </form>
 </body>
