--- a/add.html
+++ b/add.html
@@ -151,7 +151,7 @@
                             <label for='description' style='color:#135788;'>Event Description</label>
                             <textarea class="form-control" id="description" name='description' rows="3"></textarea>
                         </div>
-                        <button type='submit' class='btn btn-primary'>Save Changes</button>
+                        <button type='submit' class='btn btn-primary'>Save Changes onclick="training.php"</button>
                     </form>
                 </div>
             </div>
@@ -175,11 +175,6 @@
                     parentDiv.style.display = "none";
                     parentDiv1.style.display = "block";
                 }
-                // }
-                // else {
-                //     //if display="block" make it block. so that dropdown will disappear
-                //     parentDiv.style.display = "none";
-                // }
             }
         </script>
     </form>
