nv bar event change to training.php

--- a/eventlist.html
+++ b/eventlist.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="eventlist.html">Events</a>
+          <a class="nav-link" href="training.php">Events</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="history.html">History</a>
