--- a/history.html
+++ b/history.html
@@ -42,9 +42,9 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
+  <div class="container">
     <h2>Statistics</h2>
-    <table class="table table-hover text-center col-8">
+    <table class="table table-hover text-center col-10">
       <thead class="thead-dark">
         <tr>
           <th>Month</th>
@@ -90,7 +90,7 @@
     </table>
   </div>
 
-  <div class="container-fluid">
+  <div class="container">
 
     <div class="row">
       <h4 class='m-3'>History Activities Details</h4>
