--- a/details.html
+++ b/details.html
@@ -33,8 +33,9 @@
             </ul>
             <ul class='navbar-nav'>
                 <li class='nav-item active text-right'>
-                    <a class='nav-link' href='#'>Xuan<br><span style="font-size: 9px; color: white;">Project
-                            Manager</span></a>
+                    <!-- <a class='nav-link' href='#'>Xuan<br><span style="font-size: 9px; color: white;">Project
+                            Manager</span></a> -->
+                    <a class='nav-link' href='#'>Xuan</a>
                     <!-- <span style="font-size: 9px; color: white;">Project Manager</span> -->
                 </li>
                 <li class='nav-item active'>
