improvise details.html

--- a/details.html
+++ b/details.html
@@ -55,7 +55,7 @@
         <div class="row">
 
             <div class="col-md-5">
-                <img class="img-fluid" src="http://placehold.it/400x300" alt="">
+                <img class="img-fluid" src="https://images.pexels.com/photos/5475757/pexels-photo-5475757.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
                 <div class="container my-3">
                     <button onclick="myFunction()" type='submit' class='btn btn-primary'>Register Now!</button>
                 </div>
@@ -63,16 +63,21 @@
 
             <div class="col-md-7">
                 <h3 class="my-3">Program Description</h3>
-                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
-                    odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+                <p class="text-justify">As you’ll recall, the industrial revolution of the nineteenth century gave rise
+                    to a number of unforeseen ethical and social issues—for instance, concerns about workplace safety,
+                    wages, discrimination, and child labor—which led to real changes in worker protections, labor
+                    practices, and law. </p>
+                <h3>Learning Outcomes</h3>
+                <ul>
+                    <li>Identify privacy issues associated with information technology</li>
+                    <li>Identify ethical issues associated with information technology</li>
+                </ul>
                 <h3 class="my-3">Project Details</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Date: 09-Nov-2020</li>
+                    <li>Time: 9.00am - 12.00pm</li>
+                    <li>Venue:<a href='#'> Zoom Link</a></li>
+                    <li>Contribusion Hours: 3 hours</li>
                 </ul>
             </div>
         </div>
@@ -105,13 +110,7 @@
                             guided me at each step and enabled me to centralise my work and have control on all aspect
                             of my online business.
                         </p>
-                        <p> For me, getting my business website made was a lot of tech wizardry things. Thankfully i get
-                            an ad on Facebook ragarding commence website. I get connected with BBB team. They made my
-                            stunning website live in just 3 days.
-                            With the increase demand of online customers. I had to take my business online. BBB Team
-                            guided me at each step and enabled me to centralise my work and have control on all aspect
-                            of my online business.
-                        </p>
+                        
                     </div>
                     <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
                         <div class="px-4 pt-3"> <a href="javascript:void(0)"
@@ -130,7 +129,7 @@
     <script>
         function myFunction() {
             alert("Successfully Sign Up to this event!");
-            button.style.visibility ="hidden";
+            button.style.visibility = "hidden";
         } 
     </script>
 </body>
