--- a/details.html
+++ b/details.html
@@ -56,19 +56,14 @@
         <div class="row">
 
             <div class="col-md-5">
-                <<<<<<< HEAD <img class="img-fluid"
+              <img class="img-fluid"
                     src="https://images.pexels.com/photos/5475757/pexels-photo-5475757.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                     alt="">
-                    <div class="container my-3">
-                        <button onclick="myFunction()" type='submit' class='btn btn-primary'>Register Now!</button>
-                    </div>
-                    =======
-                    <img class="img-fluid" src="http://placehold.it/400x300" alt="">
+                   
                     <form class="container my-3">
                         <input id="register" onclick="return myFunction()" type='button' class='btn btn-primary'
                             value="Register Now!">
                     </form>
-                    >>>>>>> a0573ed46fff384c69de5688114841436aa15512
             </div>
 
             <div class="col-md-7">
