--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
                     <h6>Recomended Event</h6>
                 </div>
                 <div class='card m-2' style='width: 20rem;'>
-                    <img src='http://placehold.it/280x180' class='card-img-top' alt='...'>
+                    <img src='https://images.pexels.com/photos/5475757/pexels-photo-5475757.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    ' class='card-img-top' alt='...'>
                     <div class='card-body'>
                         <h5 class="card-title">CSR 1</h5>
                         <h6 class='class-subtitle'>Volunteering</h6>
@@ -241,14 +242,14 @@
 
 
                 <div class='card m-2' style='width: 20rem;'>
-                    <img src='http://placehold.it/280x180' class='card-img-top' alt='...'>
+                    <img src='https://images.pexels.com/photos/50711/board-electronics-computer-data-processing-50711.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940' class='card-img-top' alt='...'>
                     <div class='card-body'>
                         <h5 class="card-title">CSR 1</h5>
                         <h6 class='class-subtitle'>Volunteering</h6>
                     </div>
                 </div>
                 <div class='card m-2' style='width: 20rem;'>
-                    <img src='http://placehold.it/280x180' class='card-img-top' alt='...'>
+                    <img src='https://images.pexels.com/photos/4960396/pexels-photo-4960396.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940' class='card-img-top' alt='...'>
                     <div class='card-body'>
                         <h5 class="card-title">CSR 1</h5>
                         <h6 class='class-subtitle'>Volunteering</h6>
