--- a/details.html
+++ b/details.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class='navbar navbar-expand-lg navbar-dark bg-primary'>
-        <a class='navbar-brand' href='index.html'>ITDP</a>
+        <a class='navbar-brand' href='index.php'>ITDP</a>
         <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent'
             aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
             <span class='navbar-toggler-icon'></span>
@@ -22,7 +22,7 @@
         <div class='collapse navbar-collapse' id='navbarSupportedContent'>
             <ul class='navbar-nav mr-auto'>
                 <li class='nav-item active'>
-                    <a class='nav-link' href='index.html'>Home</a>
+                    <a class='nav-link' href='index.php'>Home</a>
                 </li>
                 <li class='nav-item'>
                     <a class='nav-link' href='training.php'>Events</a>
