--- a/details.html
+++ b/details.html
@@ -54,24 +54,11 @@
 
         <!-- Portfolio Item Row -->
         <div class="row">
-
             <div class="col-md-5">
-<<<<<<< HEAD
                 <img class="img-fluid" src="http://placehold.it/400x300" alt="">
                 <form method="POST" class="container my-3" action="details.php">
-                    <input id="register"  type='submit' class='btn btn-primary'
-                        value="Register Now!">
+                    <input id="register" type='submit' class='btn btn-primary' value="Register Now!">
                 </form>
-=======
-              <img class="img-fluid"
-                    src="https://images.pexels.com/photos/5475757/pexels-photo-5475757.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                    alt="">
-                   
-                    <form class="container my-3">
-                        <input id="register" onclick="return myFunction()" type='button' class='btn btn-primary'
-                            value="Register Now!">
-                    </form>
->>>>>>> bbfa9cd1e4d44cae27e110cc06eef7ed19367075
             </div>
 
             <div class="col-md-7">
@@ -141,15 +128,8 @@
     </div>
     <script>
         function myFunction() {
-<<<<<<< HEAD
             alert("Successfully Sign Up to this event!");
             document.getElementById("register").disabled = true;
-=======
-
-            alert("Successfully Sign Up to this event!");
-            document.getElementById("register").style.visibility = "hidden";
-
->>>>>>> bbfa9cd1e4d44cae27e110cc06eef7ed19367075
         } 
     </script>
 </body>
