--- a/details.html
+++ b/details.html
@@ -57,7 +57,7 @@
             <div class="col-md-5">
                 <img class="img-fluid" src="http://placehold.it/400x300" alt="">
                 <form method="POST" class="container my-3" action="details.php">
-                    <input id="register" type='submit' class='btn btn-primary' value="Register Now!">
+                    <input id="register" type='submit' class='btn btn-primary' value="Enroll Now!">
                 </form>
             </div>
 
