update history to php file

--- a/add.html
+++ b/add.html
@@ -29,7 +29,7 @@
                         <a class='nav-link' href='eventlist.html'>Events</a>
                     </li>
                     <li class='nav-item'>
-                        <a class='nav-link' href='history.html'>History</a>
+                        <a class='nav-link' href='history.php'>History</a>
                     </li>
                 </ul>
                 <ul class='navbar-nav'>
