--- a/details.html
+++ b/details.html
@@ -28,7 +28,7 @@
                     <a class='nav-link' href='training.php'>Events</a>
                 </li>
                 <li class='nav-item'>
-                    <a class='nav-link' href='history.html'>History</a>
+                    <a class='nav-link' href='history.php'>History</a>
                 </li>
             </ul>
             <ul class='navbar-nav'>
@@ -55,7 +55,7 @@
         <!-- Portfolio Item Row -->
         <div class="row">
             <div class="col-md-5">
-                <img class="img-fluid" src="http://placehold.it/400x300" alt="">
+                <img class="img-fluid" src="https://images.pexels.com/photos/1148820/pexels-photo-1148820.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
                 <form method="POST" class="container my-3" action="details.php">
                     <input id="register" type='submit' class='btn btn-primary' value="Enroll Now!">
                 </form>
