--- a/add.html
+++ b/add.html
@@ -153,7 +153,7 @@
                             <label for='description' style='color:#135788;'>Event Description</label>
                             <textarea class="form-control" id="description" name='description' rows="3"></textarea>
                         </div>
-                        <button type='submit' class='btn btn-primary' onclick="training.php">Save Changes</button>
+                        <button type='submit' class='btn btn-primary'>Save Changes</button>
                     </form>
                 </div>
             </div>
